apply leave feature

--- a/src/test/resources/config/Config.properties
+++ b/src/test/resources/config/Config.properties
@@ -1,3 +1,11 @@
 website.url = https://opensource-demo.orangehrmlive.com/
 username=admin
 password=admin123
+
+
+####################### Apply leave Details #######################
+leave.fromDate = 10 October 2024
+leave.toDate = 12 November 2025
+partialDays.type = All Days
+leaveDuration.type = Half Day - Morning
+leave.comment = I want leave
